Bug fix: hero header parallax 'jumps'

--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>manifest.json">
 		<meta name="description" content="<%= htmlWebpackPlugin.options.manifest.description %>">
-		<meta property="og:image" content="<%= htmlWebpackPlugin.options.manifest.ogimage %>">
+		<meta property="og:image" content="https://futurememories.se/ogimage.jpg">
 		<meta property="og:image:width" content="1200">
 		<meta property="og:image:height" content="630">
 		<% if (htmlWebpackPlugin.options.manifest.theme_color) { %>
