Add apple touch icon + mstile

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+		<meta name="msapplication-TileImage" content="/assets/mstile-144x144.png">
+    <meta name="msapplication-TileColor" content="#000000">
 		<link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>manifest.json">
 		<meta name="description" content="<%= htmlWebpackPlugin.options.manifest.description %>">
 		<meta property="og:image" content="https://futurememories.se/ogimage.jpg">
