--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
 		<meta name="msapplication-TileImage" content="/assets/mstile-144x144.png">
     <meta name="msapplication-TileColor" content="#000000">
 		<link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>manifest.json">
-		<meta name="description" content="<%= htmlWebpackPlugin.options.manifest.description %>">
+		<meta name="description" content="<%= htmlWebpackPlugin.options.description %>">
 		<meta property="og:image" content="https://futurememories.se/ogimage.jpg">
 		<meta property="og:image:width" content="1200">
 		<meta property="og:image:height" content="630">
