--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,8 @@
     <meta name="msapplication-TileColor" content="#000000">
 		<link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>manifest.json">
 		<meta name="description" content="<%= htmlWebpackPlugin.options.description %>">
-		<meta property="og:image" content="https://futurememories.se/ogimage.jpg">
+		<meta name="og:description" content="<%= htmlWebpackPlugin.options.description %>">
+		<meta property="og:image" content="<%= htmlWebpackPlugin.options.ogimage || 'https://futurememories.se/ogimage.jpg' %>">
 		<meta property="og:image:width" content="1200">
 		<meta property="og:image:height" content="630">
 		<% if (htmlWebpackPlugin.options.manifest.theme_color) { %>
