Add facebook-domain-verification meta tag

--- a/src/template.html
+++ b/src/template.html
@@ -28,6 +28,7 @@
 				<% } %>
 			<% } %>
 		<% } %>
+		<meta name="facebook-domain-verification" content="ord3u85e0kku3af5cm6nx8heial9zq" />
 	</head>
 	<body>
 		<%= htmlWebpackPlugin.options.ssr({
